--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,10 @@
 {
     "require": {
         "veronalabs/rabbit": "^1.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "RabbitBookManager\\": "src/"
+        }
     }
 }
